examples/test/testpolicy10191.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10191
  namespace: namespace83
spec:
  podSelector:
    matchLabels:
      key1: value7
      key21: value42
      key0: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value22
          key16: value15
          key38: value46
      podSelector:
        matchLabels:
          key31: value24
          key43: value11
